[workspace]
members = [ "arcw-lint", "arcw-lint-js" ]

[package]
name = "arcw"
description = "Algorand Request For Comments linter"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
rust-version = "1.60"
repository = "https://github.com/algorandfoundation/arcw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
annotate-snippets = "0.9.1"
tokio = { version = "1.19.2", features = [ "fs", "macros", "rt-multi-thread" ] }
clap = { version = "3.2.8", features = [ "derive" ] }
arcw-lint = { version = "0.1.0", path = "arcw-lint", features = [ "tokio" ] }
serde_json = "1.0.81"

[patch.crates-io.comrak]
git = "https://github.com/SamWilsn/comrak.git"
branch = "inline-line-numbers"
